tooling/nargo_cli/tests/snapshots/execute__tests__global_var_entry_point_used_in_another_entry_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "14369165033130806105",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/81XwU7DMAx1ygKUaQfgxolPyLayVYJDpRW4wEdUTP2OfjoKs6njuWxaEzRLU9oleX5+jp3NwM4MfrxNcMxg32hNhaMbZ/OIWC4lT5OI5y9R/mxgWPhPHHMIk+TnLyIGnCucYuGXrihzJb6I/Jc5w0yAvyD8SRp8d4U4b12ID8LvDMLi5XtojhfyO85d4zw93+JzLvBS5J1ziq3bvcI/Y7F523S9HpH8Lgi7jo+9JOzX+NjzKeZ/1UMHZw0O6MnPYjxeq4J8WcSzMFwDWq3H4+KcEf54zVtFMyvWPwiel2JPFYnnnYif+5IcyehMyR4i8yr1zQbmrLKX6k3m8BFCXew/6mKF70T3RDFT9CCbKXEbMcfPSibi4CbzymPy9f3CcOU6OFMtsj+0MCO0qBmuXHeuWqQ6F8doMYX+7px0IU6F37sRti53PfaHL+Jb2OfO/Vux/hnfbwR/0rg6kWe7bubtsmmbp2a7Lb4a2Uu8ZUynQ3epN+qHWs81A3u1nkvvVtlbd+Ecrd3gmPh8qz2XfB2rE8Vwqk7ytybEi6+QfmUOtPzQ2g/BL9V/CC0H5Mvn4BtiqVfX/Q8AAA==",
  "debug_symbols": "zZjdisIwEEbfJde9mEky+fFVlkWqRimUVmpdWMR333ZppcSiRLbu3Igpc74eCJnQuYhd2JwP66La1yex+riIst7mbVFX3epyzcSmKcqyOKynjwX0P+h+60/HvOqXpzZvWrFCcpkI1a7756jj90UZxIrgmt2VKk9DqQaYln5mAv0fhtsoXMKS4bhkuFwyXC0ZrpcMpyXDzWz4jZAKH4eTt0OpQXhcaq0cSq31sYf9Fw+nYg/3Rg9vhlIHMvbwPDwUMPFAJh7yfR4O/Oih4nOrFBMPzcSDmHgYJh6WiYdj4vHGfopAON7N4HRkooGNCbIxkWxMFBsTzcaE2JjMdldpx3OvML6vtU0mXDLhUwmCZAKTCZlKmNl3aDdunvbxfhj5jHAxMXu+CMdNJ4w7t9HJBCUTJpmYv0/Q3L7K0MaMhaeMw5iZ79Ho9cjIu/GClS8w6gVGv8BQKnPtVl95U+SbMgxjm/252k6mOO33MUQDnWNTb8Pu3IR+tDOZ6vQ7QDoj38V20T8=",
  "file_map": {
    "50": {
      "source": "global ONE: Field = 1;\nglobal TWO: Field = 2;\nglobal THREE: Field = 3;\n\nfn main(x: Field, y: pub Field) {\n    // Safety: testing context\n    unsafe {\n        entry_point_no_global(x, y);\n        entry_point_inner_func_globals(x, y);\n        entry_point_one_global(x, y);\n        entry_point_one_diff_global(x, y);\n    }\n}\n\nunconstrained fn entry_point_no_global(x: Field, y: Field) {\n    assert(x + y != 100);\n}\n\nunconstrained fn entry_point_one_global(x: Field, y: Field) {\n    let z = TWO + x + y;\n    assert(z == 3);\n}\n\nunconstrained fn entry_point_inner_func_globals(x: Field, y: Field) {\n    wrapper(x, y);\n}\n\n// Test that we duplicate Brillig entry points called within\n// another entry point's inner calls\nunconstrained fn wrapper(x: Field, y: Field) {\n    let z = ONE + x + y;\n    assert(z == 2);\n    entry_point_one_global(x, y);\n    // Test that we handle repeated entry point calls\n    // `entry_point_one_diff_global` should be duplicated and the duplicated function\n    // should use the globals from `entry_point_inner_func_globals`\n    entry_point_one_diff_global(y, x);\n}\n\nunconstrained fn entry_point_one_diff_global(x: Field, y: Field) {\n    let z = THREE + x + y;\n    assert(z == 4);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
