tooling/nargo_cli/tests/snapshots/execute__tests__global_var_func_with_multiple_entry_points_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9849909867400545586",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VWzU7DMAx2uwYIUw/AhReACxyytdN6nMSA54iY+hx9dBRhr67nomlzLE1JZOfz3+esBfxJgb8kFa4lnArZ7HAN18nKECvkjLPIFOcxUL4vYL7wG1w9TJuU9AvDhL0SkxV+F9rOK/kZxt94hpkBf034VR78cIs4X8MUH4TfGqbDy++Qjg/yN+ruUE/7B9x7gZej7zwm67o9KfGXLLckH8NYDyO/x3nZ22OvCfvTHrtZYv9fR+gJ10DUTHKNc1HeldzjOqfcpdo5YfuMK3HHCbydTS3CI8MF4Svze9LWSj1IaiXvQuhumK4UeXCRfeU5JR68M1xpN3ePZD+cxjd3/o8jdHbKXZoBJ2xfcM3cJ5Uj5GsJ4xtTDfb+t10I5HfB6iD7wP07Yf+G53slj+qKOPttXPVN7OMmHg7tT5R1SlKyOp3z5lCvL+WT/K8BsJtX6VdyVeMx2bYivlzfEBpXyVfqwS/kgSRS/QsAAA==",
  "debug_symbols": "tdbbaoQwEAbgd8m1FzmNJr5KKYuHuAREJWqhiO/eWAxIKl3EnRtxZP6PiJjMQmpTzs+H7Zp+JPnHQtq+Kibbd75a1oSUzratfT6OjwndLkz99o9D0W3lOBVuIjkDlRDT1f4u0z7f2NaQHOia/GnlKrRyDcfWz4Qw/UZcRzinN3HB+N4qmIpxholzTFxg4vIuziHgksU4YOIpJp5h4goT14i4oJj4+R+qdNgwGP0fl0zsrZLTGOdvxGWMi7u4yAIuRYxLTBww8RQRl6crBxG+EkgeJ9JXiTROnO4CAOEFII3PR6kuJ/TVBNDLCXYtsfrqq3C2KFuzzxvN3FWH8WP6Hkw0iQyur0w9O7PNJIdxZFutUIkUnvX0Dw==",
  "file_map": {
    "50": {
      "source": "global ONE: Field = 1;\nglobal TWO: Field = 2;\nglobal THREE: Field = 3;\n\nfn main(x: Field, y: pub Field) {\n    // Safety: testing context\n    unsafe {\n        entry_point_one(x, y);\n        entry_point_two(x, y);\n    }\n}\n\nunconstrained fn entry_point_one(x: Field, y: Field) {\n    let z = ONE + x + y;\n    assert(z == 2);\n    inner_func(x, y);\n}\n\nunconstrained fn entry_point_two(x: Field, y: Field) {\n    let z = TWO + x + y;\n    assert(z == 3);\n    inner_func(x, y);\n}\n\nunconstrained fn inner_func(x: Field, y: Field) {\n    let z = THREE + x + y;\n    assert(z == 4);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/global_var_func_with_multiple_entry_points/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
